[package]
name = "mbf_gtf"
version = "0.1.0"
authors = ["Florian Finkernagel <finkernagel@imt.uni-marburg.de>"]

[lib]
crate-type=["cdylib"]
name = "mbf_gtf"

[dependencies]
csv = "1"
serde_derive = "1.0"
regex = "1"
lazy_static = "1.3"

serde = { version = "1.0", features = ["derive"] }

#numpy = "0.4.1"
#ndarray = "0.12"

[dependencies.pyo3]
version = "0.6.0-alpha.4"
features = ["extension-module"]

