[package]
name = "mbf_gtf"
version = "0.1.3"
authors = ["Florian Finkernagel <finkernagel@imt.uni-marburg.de>"]
description = "Fast Parser for Ensembl formated GTF Files to Pandas DataFrames"
repository = "https://github.com/TyberiusPrime/mbf_gtf"
readme = "Readme.md"
keywords = ["gtf"]
license = "MIT"

[lib]
crate-type=["cdylib"]
name = "mbf_gtf"

[dependencies]
hashbrown = "0.1"

[dependencies.pyo3]
version = "0.6.0-alpha.4"
features = ["extension-module"]

